# korea-isochrone

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.gemini/: settings.json
.qwen/: settings.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd-full.md  prd-poc.txt  prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
backend-java/: README.md  build.gradle  settings.gradle
backend-java-springboot/: Dockerfile  README.md
backend-java-springboot/src/main/java/com/koreaiso/isochrone/client/: OtpClient.java
backend-java-springboot/src/main/resources/: application.yml
backend-java/src/main/java/com/koreaiso/isochrone/: IsochroneBackendApplication.java
backend-java/src/main/resources/: application.yml
backend-java/src/test/java/com/koreaiso/isochrone/: IsochroneBackendApplicationTests.java
backend-python-fastapi/: Dockerfile  README.md  pyproject.toml
backend-python-fastapi/app/: config.py  main.py
backend-python-fastapi/app/api/: isochrone.py
backend-python-fastapi/app/clients/: otp_client.py
backend-python-fastapi/app/schemas/: isochrone.py
backend-python-fastapi/tests/: test_isochrone.py
data/: README.md
frontend-vue3/: Dockerfile  package-lock.json  package.json
frontend-vue3/src/: App.vue  main.js  style.css
frontend-vue3/src/components/: KakaoPolygon.vue
otp/: build-config.json  docker-compose.builder.yml
otp/config/: build-config.json  router-config.json
otp/data/: README.md
(+10 files in other folders)
